# PersonTracking

./: .gitignore  PersonTraking.sln  README.md  filterImage.py
PersonTraking/: CMakeLists.txt  HelpEntities.cpp  HumanIdentification.cpp  HumanIdentification.h  HungarianAlgorithm.cpp  HungarianAlgorithm.h  KalmanTracker.h  NetworkManager.cpp  NetworkManager.h  ObjDetect.cpp  ObjDetect.h  ObjTracker.cpp  ObjTracker.h  WebSocket.cpp  WebSocket.h  main.cpp
TrainSVM/: TrainSVM.ipynb  Untitled.ipynb
TrainSVM/.ipynb_checkpoints/: TrainSVM-checkpoint.ipynb
